--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
 		"web-vitals": "^2.1.3"
 	},
 	"scripts": {
-		"db": "json-server  db.json --config json-server.json",
+		"start:prod": "react-scripts start",
+		"prestart:prod": "json-server  db.json --config json-server.prod.json",
 		"start": "react-scripts start",
+		"db": "json-server  db.json --config json-server.json",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
