--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@fortawesome/fontawesome-svg-core": "^1.2.36",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.17",
+		"@react-three/fiber": "^7.0.26",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
 		"redux": "^4.1.2",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.4.1",
+		"three": "^0.137.5",
 		"web-vitals": "^2.1.3"
 	},
 	"scripts": {
